Update AppComponentFactoryStub.java